--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ option(GAINPUT_TESTS "Build Tests for Gainput" ON)
 option(GAINPUT_BUILD_SHARED "BUILD_SHARED" ON)
 option(GAINPUT_BUILD_STATIC "BUILD_STATIC" ON)
 
+set(CMAKE_CXX_STANDARD 17)
+
 if(!WIN32)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
 else()
