--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -39,25 +39,39 @@ if (GAINPUT_BUILD_STATIC)
 endif (GAINPUT_BUILD_STATIC)
 
 if(WIN32)
-	target_link_libraries(gainput ${XINPUT} ws2_32)
-	target_link_libraries(gainputstatic ${XINPUT} ws2_32)
+  if(GAINPUT_BUILD_SHARED)
+	  target_link_libraries(gainput ${XINPUT} ws2_32)
+  endif()
+  if(GAINPUT_BUILD_STATIC)
+	  target_link_libraries(gainputstatic ${XINPUT} ws2_32)
+  endif()
 	add_definitions(-DGAINPUT_LIB_DYNAMIC=1)
 elseif(ANDROID)
-	target_link_libraries(gainputstatic native_app_glue log android)
-	target_link_libraries(gainput native_app_glue log android)
+  if(GAINPUT_BUILD_STATIC)
+    target_link_libraries(gainputstatic native_app_glue log android)
+  endif()
+	if(GAINPUT_BUILD_SHARED)
+    target_link_libraries(gainput native_app_glue log android)
+  endif()
 elseif(APPLE)
 	find_library(FOUNDATION Foundation)
 	find_library(IOKIT IOKit)
   find_library(GAME_CONTROLLER GameController)
-	target_link_libraries(gainput ${FOUNDATION} ${IOKIT} ${GAME_CONTROLLER})
+	if(GAINPUT_BUILD_SHARED)
+    target_link_libraries(gainput ${FOUNDATION} ${IOKIT} ${GAME_CONTROLLER})
+  endif()
   if(IOS)
       find_library(UIKIT UIKit)
       find_library(COREMOTION CoreMotion)
       find_library(QUARTZCORE QuartzCore)
-      target_link_libraries(gainput ${UIKIT} ${COREMOTION})
+      if(GAINPUT_BUILD_SHARED)
+        target_link_libraries(gainput ${UIKIT} ${COREMOTION})
+      endif()
   else()
       find_library(APPKIT AppKit)
-      target_link_libraries(gainput ${APPKIT})
+      if(GAINPUT_BUILD_SHARED)
+        target_link_libraries(gainput ${APPKIT})
+      endif()
   endif()
 endif()
 
